--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "crypto": "^1.0.1",
     "crypto-js": "^3.1.9-1",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-axios": "^2.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -24,6 +26,7 @@
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
+    "brfs": "^2.0.1",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
@@ -41,6 +44,7 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "transform-loader": "^0.2.4",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
